# finder-grid-checks

./: .gitignore  README.md  pixi.toml  pyproject.toml  requirements.txt  requirements_conda.txt  setup.py
.github/workflows/: ci.yml
ausseabed/findergc/app/: cli.py
ausseabed/findergc/lib/: allchecks.py  fliers.py  fliersgridcheck.py  holeandgapcheck.py  holesandgapscheck.py  holesgridcheck.py  utils.py
ausseabed/findergc/qax/: plugin.py
tests/ausseabed/findergc/lib/: DataHoleAndDataGapCheckTestCases.pptx  test_holeandgapcheck.py  test_holesgridcheck.py
