[project]
name = "ausseabed.findergc"
version = "0.0.1"
description = "Quality Assurance checks for grid data derived from Multi Beam Echo Sounder data"
authors = [
    { name = "Lachlan Hurst", email = "lachlan.hurst@gmail.com" },
]
dependencies = [
    "click",
    "ausseabed.qajson",
    "ausseabed.mbesgc",
]

[project.urls]
Repository = "https://github.com/ausseabed/finder-grid-checks"

[project.scripts]
findergc = "ausseabed.findergc.app.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ausseabed"]

[tool.hatch.build.targets.wheel.sources]
"ausseabed" = "ausseabed"